# crawler_pytoolkit

./: .gitignore  ChangeLog.md  README.md  pyproject.toml  requirements.txt
src/crawler_toolkit/: generator.py  mailserver.py  output_data.py  share_module.py  tor_controller.py  webdriver_action.py
src/crawler_toolkit/source/en_data/: en_name.json
src/crawler_toolkit/source/zh_data/: city.json  givename.json  lastname.json  tw_college.json  tw_company.json
tests/: file_actions.py  mongodb_actions.py  mssql_action.py
